[package]
name = "kaitou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers = "0.13.2"
dyn-fmt = "0.3.0"
levenshtein-diff = "0.2.4"
rmp-serde = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
wordnet = "0.1.2"